Fix crash when setting "No Border" from RMB menu

I have no clue why doShape() should be called after every
mouse click event, but not calling it will prevent it from
accessing the internal widget when it gets deleted by the
event handler.

BUG: 207142

svn path=/trunk/playground/artwork/dekorator/; revision=1108575